--- a/src/.env
+++ b/src/.env
@@ -4,3 +4,5 @@
   ADMIN_NAME: adminCoder@coder.com
   ADMIN_PASSWORD: adminCod3r123
   SECRET: AnaRenchen123
+  CLIENT_ID: Iv23li1dABCEI1Ck9Rx5
+  CLIENT_SECRET: b051b245a3533ee004dd3af3861c5b278141f4f1
