--- a/src/.env
+++ b/src/.env
@@ -6,3 +6,5 @@
   SECRET: AnaRenchen123
   CLIENT_ID: Iv23li1dABCEI1Ck9Rx5
   CLIENT_SECRET: b051b245a3533ee004dd3af3861c5b278141f4f1
+  PASSWORD_GMAIL_NODEMAILER: szng svez xnun eabf
+  USER_GMAIL_NODEMAILER: anamagbh@gmail.com
