logger en middleware

--- a/src/.env.development
+++ b/src/.env.development
@@ -8,3 +8,4 @@
   CLIENT_SECRET: b051b245a3533ee004dd3af3861c5b278141f4f1
   PASSWORD_GMAIL_NODEMAILER: szng svez xnun eabf
   USER_GMAIL_NODEMAILER: anamagbh@gmail.com
+  MODE: dev
