--- a/src/docs/Carts.yaml
+++ b/src/docs/Carts.yaml
@@ -10,40 +10,44 @@ paths:
           schema:
             type: string
           required: true
-          description: Mongo ID of the cart to get
+          description: Mongo ID of the cart to get.
       responses:
-        "200": # status code
-          description: A JSON object of the cart.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
-        "400": # status code
-          description: Invalid arguments, mongo id no valid.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
-        "404": # status code
+        "200":
+          description: A JSON object ot the cart.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetCartResponse"
+        "400":
+          description: Invalid cart id.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Please choose a valid mongo Id.
+        "404":
           description: Error, cart not found.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
-        "500": # status code
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Could not find the selected cart.
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
     delete:
       summary: Delete all products from the given cart.
       tags:
@@ -58,14 +62,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "400": # status code
-          description: Invalid arguments, mongo id no valid.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+        "400":
+          description: Invalid cart id.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Please choose a valid mongo Id.
         "401": # status code
           description: Unauthorized, must login to delete all products from cart.
           # content:
@@ -82,14 +88,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
     put:
       summary: Update cart with the given mongo id.
       tags:
@@ -128,14 +136,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
   /api/carts/{cid}/product/{pid}:
     post:
       summary: Add a product to the given cart.
@@ -184,6 +194,16 @@ paths:
                   error:
                     type: string
                     example: Please login, or problem with the role.
+        "403":
+          description: Unauthorised, admin cannot add products to the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Unauthorised. Insufficient privileges to access.
         "404":
           description: Cart or product not found.
           content:
@@ -209,7 +229,7 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Internal server error."
+                    example: Internal server error.
     delete:
       summary: Delete a product from the given cart.
       tags:
@@ -248,14 +268,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
   /api/carts/{cid}/products/{pid}:
     put:
       summary: Update product quantity of the given cart.
@@ -295,14 +317,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
   /api/carts/{cid}/purchase:
     post:
       summary: Create a purchase ticket.
@@ -342,14 +366,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
   /api/carts:
     post:
       summary: Create a cart at Mongo DB.
@@ -365,14 +391,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
 components:
   schemas:
     AddProductResponse:
@@ -380,76 +408,143 @@ components:
       properties:
         message:
           type: string
-          example: Product added.
         cart:
-          type: object
-          properties:
-            _id:
-              type: string
-              example: 665cc3d4c6d44e8003d48052
-            products:
-              type: array
-              items:
+          $ref: "#/components/schemas/Cart"
+      example:
+        message: "Product added."
+        cart:
+          _id: "665cc3d4c6d44e8003d48052"
+          products:
+            - product:
+                _id: "662c37bcb8c5a4462d6c586f"
+                title: "karajishi"
+                description: "Original Painting A3 Size"
+                price: 230
+                thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+                code: "horisada6"
+                stock: 3
+                status: true
+                category: "folklore"
+                createdAt: "2024-04-26T23:24:44.393Z"
+                updatedAt: "2024-07-24T19:28:29.103Z"
+                __v: 0
+                owner: "adminCoder@coder.com"
+              quantity: 2
+              _id: "66a5495e2b6d976435d5ab81"
+          createdAt: "2024-06-02T19:11:16.718Z"
+          updatedAt: "2024-07-31T19:38:28.290Z"
+          __v: 48
+
+    Cart:
+      type: object
+      properties:
+        _id:
+          type: string
+          description: mongo id is autogenerated
+        products:
+          type: array
+          items:
+            type: object
+            properties:
+              product:
                 type: object
                 properties:
-                  product:
-                    type: object
-                    properties:
-                      _id:
-                        type: string
-                        example: 662c37bcb8c5a4462d6c586f
-                      title:
-                        type: string
-                        example: karajishi
-                      description:
-                        type: string
-                        example: Original Painting A3 Size
-                      price:
-                        type: number
-                        example: 230
-                      thumbnail:
-                        type: string
-                        example: https://i.postimg.cc/dQCLz41h/karajishi.jpg
-                      code:
-                        type: string
-                        example: horisada6
-                      stock:
-                        type: number
-                        example: 3
-                      status:
-                        type: boolean
-                        example: true
-                      category:
-                        type: string
-                        example: folklore
-                      createdAt:
-                        type: string
-                        format: date-time
-                        example: "2024-04-26T23:24:44.393Z"
-                      updatedAt:
-                        type: string
-                        format: date-time
-                        example: "2024-07-24T19:28:29.103Z"
-                      __v:
-                        type: number
-                        example: 0
-                      owner:
-                        type: string
-                        example: adminCoder@coder.com
-                  quantity:
-                    type: number
-                    example: 2
                   _id:
                     type: string
-                    example: 66a5495e2b6d976435d5ab81
-            createdAt:
-              type: string
-              format: date-time
-              example: "2024-06-02T19:11:16.718Z"
-            updatedAt:
-              type: string
-              format: date-time
-              example: "2024-07-31T19:38:28.290Z"
-            __v:
-              type: number
-              example: 48
+                    description: mongo id is autogenerated
+                  title:
+                    type: string
+                    description: name of the product
+                  description:
+                    type: string
+                    description: product description
+                  price:
+                    type: number
+                    description: product price
+                  thumbnail:
+                    type: string
+                    description: product image
+                  code:
+                    type: string
+                    description: must be unique
+                  stock:
+                    type: number
+                    description: stock of the product
+                  status:
+                    type: boolean
+                    description: product status (available/not available)
+                  category:
+                    type: string
+                    description: product category
+                  createdAt:
+                    type: string
+                    format: date-time
+                  updatedAt:
+                    type: string
+                    format: date-time
+                  __v:
+                    type: number
+                  owner:
+                    type: string
+                    description: product owner
+              quantity:
+                type: number
+                description: product quantity in cart
+              _id:
+                type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        __v:
+          type: number
+      example:
+        _id: "665cc3d4c6d44e8003d48052"
+        products:
+          - product:
+              _id: "662c37bcb8c5a4462d6c586f"
+              title: "karajishi"
+              description: "Original Painting A3 Size"
+              price: 230
+              thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+              code: "horisada6"
+              stock: 3
+              status: true
+              category: "folklore"
+              createdAt: "2024-04-26T23:24:44.393Z"
+              updatedAt: "2024-07-24T19:28:29.103Z"
+              __v: 0
+              owner: "adminCoder@coder.com"
+            quantity: 2
+            _id: "66a5495e2b6d976435d5ab81"
+        createdAt: "2024-06-02T19:11:16.718Z"
+        updatedAt: "2024-07-31T19:38:28.290Z"
+        __v: 48
+
+    GetCartResponse:
+      type: object
+      $ref: "#/components/schemas/Cart"
+      example:
+        _id: "665cc3d4c6d44e8003d48052"
+        products:
+          - product:
+              _id: "662c37bcb8c5a4462d6c586f"
+              title: "karajishi"
+              description: "Original Painting A3 Size"
+              price: 230
+              thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+              code: "horisada6"
+              stock: 3
+              status: true
+              category: "folklore"
+              createdAt: "2024-04-26T23:24:44.393Z"
+              updatedAt: "2024-07-24T19:28:29.103Z"
+              __v: 0
+              owner: "adminCoder@coder.com"
+            quantity: 2
+            _id: "66a5495e2b6d976435d5ab81"
+        createdAt: "2024-06-02T19:11:16.718Z"
+        updatedAt: "2024-07-31T19:38:28.290Z"
+        __v: 48
