--- a/src/docs/Products.yaml
+++ b/src/docs/Products.yaml
@@ -4,10 +4,10 @@ paths:
       summary: Returns a list of products.
       tags:
         - Products
-      description: Optional extended description in CommonMark or HTML.
+      description: Retrieves a list of products from the database. The response includes product details and pagination information.
       responses:
         "200":
-          description: A JSON array of products.
+          description: A JSON object of products and pagination details.
           content:
             application/json:
               schema:
@@ -24,6 +24,8 @@ paths:
                     example: Internal server error.
     post:
       summary: Add a product to Mongo DB.
+      security:
+        -OAuth2: [admin, premium]
       tags:
         - Products
       requestBody:
@@ -32,7 +34,7 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/ProductBody"
-      description: Only premium users and admin can add a product to the database. They must login first.
+      description: Add a product to the database. Only premium users and admin can perform this action.
       responses:
         "200":
           description: A JSON object with the new product.
@@ -55,9 +57,9 @@ paths:
                     properties:
                       error:
                         type: string
-                        example: "Must complete all valid properties to add product.Valid properties are: title, description, category, price, status, thumbnail, code, stock"
+                        example: Must complete all valid properties to add product. Valid properties are - title, description, category, price, status, thumbnail, code, stock.
         "401":
-          description: Unauthorized, only admin and premium users can add product.
+          description: Unauthorized, must login to add products.
           content:
             application/json:
               schema:
@@ -65,8 +67,18 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: Please login, or problem with the role
-        "500": # status code
+                    example: Please login, or problem with the role.
+        "403":
+          description: Unauthorised, only admin and premium users can add products to the DB.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Unauthorised. Insufficient privileges to access.
+        "500":
           description: Internal server error.
           content:
             application/json:
@@ -81,47 +93,58 @@ paths:
       summary: Returns the product with the given id.
       tags:
         - Products
-      description: Optional extended description in CommonMark or HTML.
+      parameters:
+        - in: path
+          name: pid
+          schema:
+            type: string
+          required: true
+          description: Mongo ID of the product to get.
+      description: Retrieves a product from the database.
       responses:
-        "200": # status code
-          description: A JSON object of a product.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
-        "404": # status code
+        "200":
+          description: A JSON object ot the product.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetProductResponse"
+        "400":
+          description: Invalid product id.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Please choose a valid mongo Id.
+        "404":
           description: Error, product not found.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
-        "400": # status code
-          description: Error, invalid product id.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
-        "500": # status code
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Could not find the selected product.
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
     put:
       summary: Update a product at Mongo DB.
       tags:
         - Products
       description: Only premium users and admin can update a product. They must login first.
       responses:
-        "200": # status code
+        "200":
           description: A JSON object of the updated product.
           # content:
           #   application/json:
@@ -129,7 +152,7 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "400": # status code
+        "400":
           description: Invalid arguments, because code already exists, or user must enter at least one valid property, or property is not valid.
           # content:
           #   application/json:
@@ -137,7 +160,7 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "401": # status code
+        "401":
           description: Unauthorized, only admin and premium users can update a product. Premium users can only update their own product.
           # content:
           #   application/json:
@@ -145,7 +168,7 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "404": # status code
+        "404":
           description: Error, product not found.
           # content:
           #   application/json:
@@ -153,21 +176,23 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
     delete:
       summary: delete a product from Mongo DB.
       tags:
         - Products
       description: Only premium users and admin can delete a product. They must login first.
       responses:
-        "200": # status code
+        "200":
           description: A message saying product with given id was deleted.
           # content:
           #   application/json:
@@ -175,7 +200,7 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "401": # status code
+        "401":
           description: Unauthorized, only admin and premium users can delete a product. Premium users can only delete their own products.
           # content:
           #   application/json:
@@ -183,7 +208,7 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "404": # status code
+        "404":
           description: Error, product not found.
           # content:
           #   application/json:
@@ -191,14 +216,16 @@ paths:
           #       type: array
           #       items:
           #         type: string
-        "500": # status code
+        "500":
           description: Internal server error.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error.
 
 components:
   schemas:
@@ -207,118 +234,175 @@ components:
       properties:
         _id:
           type: string
-          example: "662c37bcb8c5a4462d6c586f"
+          description: mongo id is autogenerated
         title:
           type: string
-          example: "karajishi"
+          description: name of the product
         description:
           type: string
-          example: "Original Painting A3 Size"
+          description: product description
         price:
           type: number
-          example: 230
+          description: product price
         thumbnail:
           type: string
-          example: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+          description: product image
         code:
           type: string
-          example: "horisada6"
+          description: product code must be unique
         stock:
           type: number
-          example: 3
+          description: product stock
         status:
           type: boolean
-          example: true
+          description: product status (available/not available)
         category:
           type: string
-          example: "folklore"
+          description: product category
         createdAt:
           type: string
           format: date-time
-          example: "2024-04-26T23:24:44.393Z"
         updatedAt:
           type: string
           format: date-time
-          example: "2024-07-24T19:28:29.103Z"
         __v:
           type: number
-          example: 0
         owner:
           type: string
-          example: "adminCoder@coder.com"
+          description: product owner
         id:
           type: string
-          example: "662c37bcb8c5a4462d6c586f"
+      example:
+        _id: "662c37bcb8c5a4462d6c586f"
+        title: "karajishi"
+        description: "Original Painting A3 Size"
+        price: 230
+        thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+        code: "horisada6"
+        stock: 3
+        status: true
+        category: "folklore"
+        createdAt: "2024-04-26T23:24:44.393Z"
+        updatedAt: "2024-07-24T19:28:29.103Z"
+        __v: 0
+        owner: "adminCoder@coder.com"
+        id: "662c37bcb8c5a4462d6c586f"
     ProductsResponse:
       type: object
       properties:
         status:
           type: string
-          example: "success"
         payload:
           type: array
           items:
             $ref: "#/components/schemas/Product"
         totalPages:
           type: number
-          example: 1
         prevPage:
           type: string
           nullable: true
-          example: null
         nextPage:
           type: string
           nullable: true
-          example: null
         page:
           type: number
-          example: 1
         hasPrevPage:
           type: boolean
-          example: false
         hasNextPage:
           type: boolean
-          example: false
         prevLink:
           type: string
           nullable: true
-          example: null
         nextLink:
           type: string
           nullable: true
-          example: null
+      example:
+        status: "success"
+        payload:
+          - _id: "662c37bcb8c5a4462d6c586f"
+            title: "karajishi"
+            description: "Original Painting A3 Size"
+            price: 230
+            thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+            code: "horisada6"
+            stock: 3
+            status: true
+            category: "folklore"
+            createdAt: "2024-04-26T23:24:44.393Z"
+            updatedAt: "2024-07-24T19:28:29.103Z"
+            __v: 0
+            owner: "adminCoder@coder.com"
+            id: "662c37bcb8c5a4462d6c586f"
+        totalPages: 1
+        prevPage: null
+        nextPage: null
+        page: 1
+        hasPrevPage: false
+        hasNextPage: false
+        prevLink: null
+        nextLink: null
     ProductBody:
       type: object
       properties:
         title:
           type: string
-          example: "karajishi"
+          description: product name
         description:
           type: string
-          example: "Original Painting A3 Size"
+          description: product description
         price:
           type: number
-          example: 230
+          description: product price
         thumbnail:
           type: string
-          example: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+          description: product image
         code:
           type: string
-          example: "horisada6"
+          description: product code, must be unique
         stock:
           type: number
-          example: 3
+          description: product stock
         status:
           type: boolean
-          example: true
+          description: product status (available/not available)
         category:
           type: string
-          example: "folklore"
+          description: product category
+      example:
+        title: "karajishi"
+        description: "Original Painting A3 Size"
+        price: 230
+        thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+        code: "horisada6"
+        stock: 3
+        status: true
+        category: "folklore"
+    GetProductResponse:
+      type: object
+      properties:
+        product:
+          $ref: "#/components/schemas/Product"
     UploadProductResponse:
       type: object
       properties:
         message:
           type: string
-          example: "Product added."
         newProduct:
           $ref: "#/components/schemas/Product"
+      example:
+        message: "Product added."
+        newProduct:
+          _id: "662c37bcb8c5a4462d6c586f"
+          title: "karajishi"
+          description: "Original Painting A3 Size"
+          price: 230
+          thumbnail: "https://i.postimg.cc/dQCLz41h/karajishi.jpg"
+          code: "horisada6"
+          stock: 3
+          status: true
+          category: "folklore"
+          createdAt: "2024-04-26T23:24:44.393Z"
+          updatedAt: "2024-07-24T19:28:29.103Z"
+          __v: 0
+          owner: "adminCoder@coder.com"
+          id: "662c37bcb8c5a4462d6c586f"
